<resources>
    <string name="app_name">OnGoShop</string>
    <string name="create"><u>Create Account</u></string>
    <string name="password">Password</string>
    <string name="signin"><u>Sign In</u></string>
    <string name="terms"><u>I accept terms &amp; conditions</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key_map" translatable="false">AIzaSyCa6sbr7-c25opaKGAMA2YhvNF5J4lKNu4</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="error_rating">Please rate this trait before submit.</string>
    <string name="error_image">Please select image</string>
    <string name="error_name">Please enter name</string>
    <string name="error_age">Please enter age</string>
    <string name="error_country_code">Please select country code</string>
    <string name="error_country">Please enter country</string>
    <string name="error_phone_number">Please enter phone number</string>
    <string name="error_invalid_phone_number">Please enter valid phone number</string>
    <string name="error_brand_name">Please enter brand name</string>
    <string name="error_price">Please enter price</string>
    <string name="error_product_name">Please enter product name</string>
    <string name="error_gtin_number">Please enter GTIN number</string>
    <string name="error_country_origin">Please enter country of origin</string>
    <string name="error_measurement_unit">Please enter measurement unit</string>
    <string name="error_product_weight">Please enter product weight</string>
    <string name="error_product_description">Please enter product description</string>
    <string name="error_business_name">Please enter business name</string>
    <string name="error_category">Please select category</string>
    <string name="error_abn">Please enter ABN</string>
    <string name="error_building_number">Please enter building number</string>
    <string name="error_street_number">Please enter street number</string>
    <string name="error_city">Please enter city</string>
    <string name="error_state">Please enter state</string>
    <string name="error_postal_code">Please enter postal code</string>
    <string name="error_open_time">Please enter open time</string>
    <string name="error_close_time">Please enter close time</string>
    <string name="error_email">Please enter email</string>
    <string name="error_otp">Please enter OTP</string>
    <string name="error_validemail">Please enter valid email</string>
    <string name="error_validotp">Please enter valid OTP</string>
    <string name="error_password">Please enter password</string>
    <string name="error_cvv">Please enter CVV</string>
    <string name="error_transaction_id">Could not find transaction ID</string>
    <string name="error_trait_name">Please enter trait name</string>
    <string name="error_reason_toreport">Please mention the reason to report this user</string>
    <string name="error_user_id">User id not found</string>
    <string name="error_request_id">Request id not found</string>
    <string name="error_new_password">Please enter new password</string>
    <string name="error_cpassword">Please enter confirm password</string>
    <string name="error_password_length">Password length atleast 6 digit.</string>
    <string name="error_cvv_length">Please enter valid CVV number</string>
    <string name="error_trait_length">Trait name length should be atleast 3 </string>
    <string name="error_traitname_length">Trait name length atleast 3 characters.</string>
    <string name="error_cpassword_length">Confirm password length atleast 6 digit.</string>
    <string name="error_password_not_matched">Passwords don’t match</string>
    <string name="error_terms_conditions">Please accept terms &amp; conditions</string>
    <string name="permission">Please first turn on permission</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="enter_card_name">Enter card name</string>
    <string name="cardnumber_missing_message">Please enter card number</string>
    <string name="cardname_missing_message">Please enter card holder name</string>
    <string name="month_missing_message">Please enter expiry month</string>
    <string name="year_missing_message">Please enter expiry year</string>
    <string name="invalid_card_message">Please enter valid card number</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="write_something">Write something...</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="fb_app_id">195760838860848</string>
    <string name="no_list_available">No List Available</string>
    <string name="created_on">Created On: </string>
    <string name="no_card_available">No card available!</string>
    <string name="my_connections">My connections</string>
    <string name="find_new_connections">Find new connections</string>
    <string name="invite_friend_from_facebook">Invite Friend From Facebook</string>
    <string name="send_request">Send Request</string>
    <string name="select_default_card">Select Default Card</string>
    <string name="no_default_card_available">No Default Card Available!</string>
    <string name="add_and_select_default_card">Please add and select default card for payment</string>
    <string name="enter_trait_name">Enter trait name</string>
    <string name="messenger">Messenger</string>
    <string name="oldest">Oldest</string>
    <string name="error_bio">Please write something in bio</string>
    <string name="no_traits_found_in_list">No traits found in list</string>
    <string name="no_activity_found_in_list">No activity found in list</string>
    <string name="no_notifications">No notifications</string>
    <string name="remove_notification">Remove notification</string>
    <string name="wall">Wall</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="enter_password">Enter Password</string>
    <string name="otp_invalid_message">Please enter a valid OTP</string>
    <string name="turn_on">Turn on</string>
    <string name="gps_disable">GPS is disabled in your device. Please turn on location of your device</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_name">Enter Full Name</string>
    <string name="resend">Resend</string>
    <string name="state">State</string>
    <string name="open_time">Open Time</string>
    <string name="close_time">Close Time</string>
    <string name="enter_city_suburb">Enter city/suburb</string>
    <string name="postal_code">Postal Code</string>
    <string name="enter_postal_code">Enter postal code</string>
    <string name="enter_country">Enter country</string>
    <string name="no_category_available">No Category Available</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="delivery_times">Delivery Times:</string>
    <string name="enter_number">Enter number</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="saturday">Saturday</string>
    <string name="update">Update</string>
    <string name="enter_business_name">Enter business name</string>
    <string name="enter_category">Enter category</string>
    <string name="enter_city">Enter city</string>
    <string name="city_suburb">City/Suburb</string>
    <string name="my_shop">My Shop</string>
    <string name="enter_address">Enter address</string>
    <string name="address">Address</string>
    <string name="enter_state">Enter state</string>
    <string name="delivery">Delivery</string>
    <string name="maximum_number_of_deliveries_per_day">Maximum number of deliveries per day</string>
    <string name="max_deliveries_error">Please enter maximum number of delivery per day.</string>
    <string name="confirm">Confirm</string>
    <string name="select">Select</string>
    <string name="select_category">Select Category</string>
    <string name="enter_item">Enter Item</string>
    <string name="add_categories">Add Categories</string>
    <string name="board_for_delivery">Items on Board for delivery</string>
    <string name="complete_delivery">Complete Delivery</string>
    <string name="enter_a_new_card_details">Enter a new card details</string>
    <string name="name">Name</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="enter_credit_card_number">Enter credit card number</string>
    <string name="save">Save</string>
    <string name="save_for_future_transaction">Save for future transaction</string>
    <string name="add_card">Add Card</string>
    <string name="add_employee">Add Employee</string>
    <string name="add_product">Add Product</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="mobile">Mobile</string>
    <string name="enter_mobile">Enter mobile</string>
    <string name="ids">Id</string>
    <string name="enter_id">Enter id</string>
    <string name="add_photo">Add Photo</string>
    <string name="brand">Brand</string>
    <string name="enter_brand">Enter brand</string>
    <string name="add_price">Add Price ($)</string>
    <string name="enter_price">Enter price</string>
    <string name="product_name">Product Name</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="gtin_number">GTIN Number</string>
    <string name="no_bar_code_item">No Bar Code Item</string>
    <string name="enter_gtin_number">Enter gtin number</string>
    <string name="country_of_origin">Country of Origin</string>
    <string name="proceed_to_category">Proceed to Category</string>
    <string name="enter_product_description">Enter product description</string>
    <string name="product_description">Product Description</string>
    <string name="enter_unit_of_measurement">Enter unit of measurement</string>
    <string name="unit_of_measurement">Unit of measurement</string>
    <string name="enter_country_of_origin">Enter country of origin</string>
    <string name="scan_barcode_to_add_items">Scan Barcode to add items</string>
    <string name="barcode_scanner">Barcode Scanner</string>
    <string name="search_with_barcode_number">Search with barcode number</string>
    <string name="search_with_barcode_scan">Search with barcode scan</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="business_name">Business Name</string>
    <string name="category">Category</string>
    <string name="abn">ABN</string>
    <string name="enter_abn">Enter abn</string>
    <string name="building_number">Building Number</string>
    <string name="enter_building_number">Enter building number</string>
    <string name="street_number">Street Name</string>
    <string name="enter_street_number">Enter street name</string>
    <string name="country">Country</string>
    <string name="shop_timings">Shop Timings</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="kilograms">Kilograms</string>
    <string name="pounds">Pounds</string>
    <string name="logout_warning_msg">Are you sure you want to \n logout?</string>
    <string name="gram">Grams</string>
</resources>