<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddShopActivity">


            <ImageView
                android:id="@+id/ivBar"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_120sdp"
                android:scaleType="fitXY"
                android:src="@drawable/header" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:fontFamily="@font/regular"
                    android:text="Add Your Shop!"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ivBar"

        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                style="@style/CommonTextWrapcontent"
                android:text="@string/business_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


            <EditText
                android:id="@+id/et_shop_name"
                style="@style/Edittext"
                android:layout_below="@id/tvEmail"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_business_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvEmail"
                style="@style/CommonTextWrapcontent"
                android:layout_below="@id/ivBar"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


            <TextView
                android:id="@+id/tv_category_name"
                style="@style/Edittext"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_category"
                android:imeOptions="actionNext"
                android:maxLength="100"
                android:maxLines="1"
                android:textSize="16sp" />

            <TextView
                style="@style/CommonTextWrapcontent"
                android:layout_below="@id/ivBar"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/abn"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


            <EditText
                android:id="@+id/et_shop_abn"
                style="@style/Edittext"
                android:layout_below="@id/tvEmail"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_abn"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPass"
                style="@style/CommonTextWrapcontent"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/building_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_shop_building_number"
                style="@style/Edittext"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_building_number"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="1"
                android:textSize="16sp" />

            <TextView
                style="@style/CommonTextWrapcontent"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/street_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_shop_street_number"
                style="@style/Edittext"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_street_number"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="1"
                android:textSize="16sp" />

            <TextView
                style="@style/CommonTextWrapcontent"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/city_suburb"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_shop_city"
                style="@style/Edittext"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_city_suburb"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="1"
                android:textSize="16sp" />

            <TextView
                style="@style/CommonTextWrapcontent"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/state"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <RelativeLayout
                android:id="@+id/et_shop_state"
                android:layout_height="@dimen/_45sdp"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/_4sdp"
                android:background="@drawable/shape"
                android:layout_marginTop="@dimen/_5sdp">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:id="@+id/statespinner"
                    android:layout_height="match_parent"/>

            </RelativeLayout>

            <TextView
                style="@style/CommonTextWrapcontent"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_shop_country"
                style="@style/Edittext"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_country"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="1"
                android:textSize="16sp" />

            <TextView
                style="@style/CommonTextWrapcontent"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/postal_code"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_shop_postal_code"
                style="@style/Edittext"
                android:layout_marginTop="@dimen/_5sdp"
                android:digits="0123456789"
                android:hint="@string/enter_postal_code"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="8"
                android:maxLines="1"
                android:textSize="16sp" />

            <TextView
                style="@style/CommonTextWrapcontent"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/shop_timings"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_open_time"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/shape"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:hint="@string/open_time"
                    android:textSize="16sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/shape"
                    android:id="@+id/tv_close_time"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:hint="@string/close_time"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                style="@style/CommonTextWrapcontent"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/add_photo"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/shape">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:riv_corner_radius="@dimen/_5sdp"
                    android:layout_centerInParent="true" />

                <ImageView
                    android:id="@+id/ivcamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/camera" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnSubmit"
                style="@style/Button"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>