<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePasswordActivity">


    <ImageView
        android:id="@+id/ivBar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_70sdp"
        android:scaleType="fitXY"
        android:src="@drawable/small_header"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/change_password"
            android:fontFamily="@font/regular"
            android:textSize="@dimen/_14sdp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/ivBar"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"

            android:orientation="vertical"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_gravity="center"/>
            <TextView
                style="@style/CommonTextWrapcontent"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/old_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"/>
            <EditText
                android:id="@+id/et_oldpassword"
                style="@style/Edittext"
                android:layout_marginTop="@dimen/_5sdp"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:hint="@string/enter_old_password"
                android:textSize="16sp" />
            <TextView
                style="@style/CommonTextWrapcontent"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/new_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"/>
            <EditText
                android:id="@+id/et_newpassword"
                style="@style/Edittext"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:layout_marginTop="@dimen/_5sdp"
                android:inputType="textPassword"
                android:hint="@string/enter_new_password"
                android:textSize="16sp" />
            <TextView
                style="@style/CommonTextWrapcontent"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"/>
            <EditText
                android:id="@+id/et_confirmpassword"
                android:imeOptions="actionDone"
                android:maxLines="1"
                style="@style/Edittext"
                android:layout_marginTop="@dimen/_5sdp"
                android:inputType="textPassword"
                android:hint="@string/enter_confirm_password"
                android:textSize="16sp" />
            <Button
                android:id="@+id/btnUpdate"
                style="@style/Button"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/update"
                />

        </LinearLayout>


    </ScrollView>
</RelativeLayout>