<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddCategoryActivity">
    <ImageView
        android:id="@+id/ivBar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_70sdp"
        android:scaleType="fitXY"
        android:src="@drawable/small_header"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        >
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/add_categories"
            android:fontFamily="@font/regular"
            android:textSize="@dimen/_14sdp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/ivBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvScan"
                style="@style/CommonTextWrapcontent"
                android:text="@string/select_category"
                android:textColor="@color/black"

                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_14sdp"/>

            <EditText
                android:id="@+id/edSelect"
                style="@style/Edittext"
                android:layout_marginTop="@dimen/_10sdp"
                android:inputType="textEmailAddress"
                android:hint="@string/select"
                android:drawableRight="@drawable/drop_down"
                android:textSize="16sp" />
            <Button
                android:id="@+id/btnItem"
                style="@style/Button"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/enter_item"
                />
        </LinearLayout>


    </ScrollView>
</RelativeLayout>