<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_15sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_shape"
        android:orientation="vertical">

        <TextView
            style="@style/CommonTextWrapcontent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/logout_warning_msg"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnYes"
                style="@style/Button"
                android:layout_weight="1"
                android:background="@drawable/edit"
                android:fontFamily="@font/medium"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnNo"
                style="@style/Button"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/edit"
                android:fontFamily="@font/medium"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>